fix: dark mode compat

--- a/less/forum.less
+++ b/less/forum.less
@@ -18,3 +18,27 @@
         padding: 0 20px;
     }
 }
+
+.emojionearea-picker {
+    //& when (@config-dark-mode =true) {
+        background-color: @body-bg !important;
+    //}
+}
+
+.emojionearea-filters {
+    //& when (@config-dark-mode =true) {
+        background-color: @body-bg !important;
+    //}
+}
+
+.emojionearea-filter.active {
+    //& when (@config-dark-mode =true) {
+        background: @control-bg !important;
+    //}
+}
+
+.emojionearea-category-title {
+    //& when (@config-dark-mode =true) {
+        background: @body-bg !important;
+    //}
+}
